# GRACE_MCP

./: .gitignore  README.md  pyproject.toml
scripts/: Start-GraceHostContinuation.ps1
src/grace_orchestrator/: __init__.py  __main__.py  cli_dashboard.py  db.py  hooks.py  host_continuation.py  mimo.py  models.py  permissions.py  policy.py  process_identity.py  prompts.py  repo.py  resources.py  server.py  service.py  state_machine.py
tests/: conftest.py  test_admin_recovery.py  test_antigravity_actor.py  test_audit_resolutions.py  test_compact_read.py  test_continuation_ledger.py  test_gui_neutral_inbox_contract.py  test_hooks.py  test_host_continuation.py  test_inbox.py  test_mimo_bridge.py  test_permissions.py  test_policy.py  test_policy_coverage.py  test_process_identity.py  test_repo_paths.py  test_scope_validation.py  test_server_coverage.py  test_server_surface.py  test_state_machine.py  test_status_read_model.py  test_task_flow.py  test_watchdog_and_projections.py
